--- a/template.tex
+++ b/template.tex
@@ -15,22 +15,22 @@
 \maketitle
 
 \section{Simulating the solar system}
-\input{a}
+\input{a1}
 
-\input{b}
+\input{b1}
 
 
 \section{Calculating forces with the FFT}
 
-\input{a}
+\input{a2}
 
-\input{b}
+\input{b2}
 
 \section{Spiral and elliptical galaxies}
 
-\input{a}
+\input{a3}
 
-\input{b}
+\input{b4}
 
 
 
