--- a/a3.tex
+++ b/a3.tex
@@ -7,7 +7,7 @@ The index j referres to the measured value for x and i referres to the feature w
 
 
 First ten lines:
-\lstinputlisting[linerange={1,10}]{data_array.txt}
+\verbatiminput[firstline=1,lastline=10]{data_array.txt}
 
 
 \begin{figure}[h!]
