--- a/a3.tex
+++ b/a3.tex
@@ -7,7 +7,7 @@ The index j referres to the measured value for x and i referres to the feature w
 
 
 First ten lines:
-\verbatiminput[firstline=1,lastline=10]{data_array.txt}
+\lstinputlisting[firstline=1,lastline=10]{data_array.txt}
 
 
 \begin{figure}[h!]
