--- a/a3.tex
+++ b/a3.tex
@@ -7,7 +7,8 @@ The index j referres to the measured value for x and i referres to the feature w
 
 
 First ten lines:
-\lstinputlisting[firstline=1,lastline=10]{data_array.txt}
+%\lstinputlisting[firstline=1,lastline=10]{data_array.txt}
+(Imagine this line would work ;))
 
 
 \begin{figure}[h!]
