--- a/b3.tex
+++ b/b3.tex
@@ -18,4 +18,10 @@ where y is either 1 or 0 depending on our set and x is in our first iteration th
 The more moments I use, the more it converges, but at some dimension an owerflow appears so it's not working anymore. A possibility might be to scale the other moments as well. Because they can be far off. For N=5 (Or J - I used polynomials) the upper area had a okaish fit, but the lower not. This was the case kappa-flags. 
 In the second attempt we are trying color-flags.
 
+\begin{figure}[h!]
+    \centering
+    \includegraphics[width=0.8\textwidth]{fig3b.png}
+    \caption{Cost function plotted over iterations.}
+\end{figure}
+
 \lstinputlisting{b3.py}
