--- a/b3.tex
+++ b/b3.tex
@@ -20,7 +20,7 @@ In the second attempt we are trying color-flags.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.8\textwidth]{fig3b.png}
+    \includegraphics[width=0.8\textwidth]{3b_fig.jpg}
     \caption{Cost function plotted over iterations.}
 \end{figure}
 
